# segy-loader

./: LICENSE  README.md  pyproject.toml
src/: loader.py
